--- a/beginning.html
+++ b/beginning.html
@@ -7,5 +7,8 @@
 <body>
  <h1> il fait beau à Paris</h1>
  <h2> j'aurais aimé y renter pour longtemps</h2>
+ <div>
+ 	<h3> je viens de jouer au badboy! ça se paye cashhhhh</h3>
+ </div>
 </body>
 </html>
