--- a/beginning.html
+++ b/beginning.html
@@ -9,6 +9,13 @@
  <h2> j'aurais aimé y renter pour longtemps</h2>
  <div>
  	<h3> je viens de jouer au badboy! ça se paye cashhhhh</h3>
+ 	<h4> Affaire  Benalla </h4>
+ 	<ul>
+ 		<li> Barcelonne</li>
+ 		<li>Naple</li>
+ 		<li> Monte-Carlo</li>
+ 		<li>Lyon</li>
+ 	</ul>
  </div>
 </body>
 </html>
